🧹 chore: add packages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-document": "^3.13.0",
     "@tiptap/extension-highlight": "^3.13.0",
+    "@tiptap/extension-paragraph": "^3.13.0",
+    "@tiptap/extension-text": "^3.13.0",
     "@tiptap/extension-typography": "^3.13.0",
     "@tiptap/extensions": "^3.13.0",
     "@tiptap/markdown": "^3.13.0",
@@ -18,11 +21,13 @@
     "@tiptap/starter-kit": "^3.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "immer": "^11.0.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
