--- a/client/components.json
+++ b/client/components.json
@@ -13,9 +13,9 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@/shared/ui/components",
-    "utils": "@/shared/lib/utils",
+    "utils": "@/shared/ui/lib/utils",
     "ui": "@/shared/ui",
-    "lib": "@/shared/lib",
+    "lib": "@/shared/ui/lib",
     "hooks": "@/shared/hooks"
   },
   "registries": {}
