--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/starter-kit": "^3.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fast-diff": "^1.3.0",
     "immer": "^11.0.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
