--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "openai": "^6.10.0",
+    "overlay-kit": "^1.8.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
